Fixed spacing

--- a/main.css
+++ b/main.css
@@ -816,9 +816,8 @@ img {
 }
 
 .contact-label{
-    background-color: var(--input-color);
-    border-radius: .5rem;
-    padding: .75rem 1rem .25rem;
+    font-size: var(--small-font-size);
+    color: var(--title-color);
 }
 
 .contact-input{
